Aug 03 2003  3.0.1  Added --help to kismet script
                    Fixed gps after breaking it yesterday
Aug 02 2003  3.0.1  Fixed alert protocol to use a \001 delimited string
                    Fixed initialization of GPS coords (mdmcl)
                    Fixed stray gps debug string (mdmcl)
                    Removed ability to disable gps in configure.  It didn't
                     save enough to be worth it and the new code doesn't like
                     gps not being there.
Jul 31 2003  3.0.1  Added PROBENORESP alert
                    Fixed always trying to log gps info
Jul 30 2003  3.0.1  Started 3.0.1 devel tree

Jul 30 2003  3.0.0  Released 3.0.0 stable.  Major improvements include:
                     Integration with snort
                     New packet engine
                     Remote drone sniffers
                     Mac OSX support
                     Stateful packet inspector
                     New alert system
                     Uncountable bugfixes and updates
                    BE SURE TO READ THE README WHEN UPGRADING FROM A PREVIOUS
                    VERSION OF KISMET!  MANY THINGS HAVE CHANGED!
                     
Jul 30 2003  2.9.1  Hopefully fixed compass for real this time
Jul 29 2003  2.9.1  Moved to libpcap 0.7.2 stable.  Use cvs update -P to prune
                     out the old directories automatically.
Jul 24 2003  2.9.1  Fixed cisco and cisco_cvs to not try to hop
                    Updated config file man page
                    Rewrote CSV export log
Jul 23 2003  2.9.1  Fixed vihasource gps call
                    Updated gpsd.h to use inttypes.h if present
                    Updated panel compass to (hopefully) be not broken now.
                    Merged patch from tz to fix trimming last 4 bytes of 
                     decrypt-mangled packets.
Jul 22 2003  2.9.1  Integrated not-broken heading code from gkismet to do 
                     software heading calcs.  Hopefully I didn't break it. Fix