@@ -197,6 +197,8 @@ wsp100 - WSP100 embedded remote sensor.
 .PP
 wtapfile - Saved file of packets readable by libwiretap
 .PP
+pcapfile - Saved file of packets readable by libpcap
+.PP
 ar5k - AR5K-based 802.11a cards using the vt_ar5k drivers.
 .PP
 drone - Kismet remote drone.
